--- a/package.json
+++ b/package.json
@@ -6,10 +6,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.10",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
+    "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
+    "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
     "next": "latest",
     "postcss": "8.4.24",
@@ -24,6 +29,7 @@
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
     "drizzle-kit": "^0.19.13",
-    "encoding": "^0.1.13"
+    "encoding": "^0.1.13",
+    "sass": "^1.68.0"
   }
 }
