--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@material/material-color-utilities": "^0.2.7",
     "@mui/material": "^5.14.10",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
+    "lodash": "^4.17.21",
     "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
     "next": "latest",
@@ -25,6 +28,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
