--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -35,6 +36,8 @@
     "@types/react-dom": "18.2.5",
     "drizzle-kit": "^0.19.13",
     "encoding": "^0.1.13",
+    "prettier": "^3.0.3",
     "sass": "^1.68.0"
-  }
+  },
+  "prettier": {}
 }
