--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "prettier"
+    "format": "prettier",
+    "type": "tsc",
+    "lint": "eslint"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -14,30 +16,33 @@
     "@mui/material": "^5.14.10",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
-    "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
+    "eslint-plugin-i": "^2.28.1",
     "lodash": "^4.17.21",
     "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
     "next": "latest",
-    "postcss": "8.4.24",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
     "drizzle-kit": "^0.19.13",
     "encoding": "^0.1.13",
+    "eslint": "^8.50.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
     "prettier": "^3.0.3",
-    "sass": "^1.68.0"
+    "sass": "^1.68.0",
+    "typescript": "^5.2.2"
   },
   "prettier": {}
 }
