--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
     "next": "latest",
+    "normalize.css": "^8.0.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-colorful": "^5.6.1",
