--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "format": "prettier",
     "type": "tsc",
-    "lint": "eslint"
+    "lint": "next lint",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -14,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@material/material-color-utilities": "^0.2.7",
     "@mui/material": "^5.14.10",
+    "@mui/material-next": "^6.0.0-alpha.102",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "clsx": "^2.0.0",
@@ -30,6 +32,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^13.5.2",
     "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -41,6 +44,8 @@
     "eslint": "^8.50.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
+    "eslint-plugin-mui-path-imports": "^0.0.15",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
     "typescript": "^5.2.2"
