--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lodash": "^4.17.21",
     "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
-    "next": "latest",
+    "next": "^13.5.3",
     "normalize.css": "^8.0.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
