--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^8.50.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
+    "eslint-plugin-lodash": "^7.4.0",
     "eslint-plugin-mui-path-imports": "^0.0.15",
     "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
