--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material-next": "^6.0.0-alpha.102",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
+    "@tanstack/react-table": "^8.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
