--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.0.0",
     "drizzle-orm": "^0.28.6",
     "eslint-plugin-i": "^2.28.1",
+    "govuk-frontend": "^4.7.0",
     "lodash": "^4.17.21",
     "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
@@ -30,8 +31,11 @@
     "normalize.css": "^8.0.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
+    "react-bem-helper": "^1.4.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-merge-refs": "^2.1.1",
+    "sass-material-colors": "^0.0.5"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.2",
