--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-bem-helper": "^1.4.1",
     "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
-    "react-merge-refs": "^2.1.1",
-    "sass-material-colors": "^0.0.5"
+    "react-merge-refs": "^2.1.1"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.2",
