--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "start": "next start",
     "format": "prettier",
     "type": "tsc",
-    "lint": "next lint",
-    "postinstall": "patch-package"
+    "lint": "next lint"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@material/material-color-utilities": "^0.2.7",
-    "@mui/material": "^5.14.10",
-    "@mui/material-next": "^6.0.0-alpha.102",
     "@supabase/auth-helpers-nextjs": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.10.3",
@@ -25,14 +21,12 @@
     "eslint-plugin-i": "^2.28.1",
     "govuk-frontend": "^4.7.0",
     "lodash": "^4.17.21",
-    "merge-sx": "^1.3.1",
     "nanoid": "^5.0.1",
     "next": "^13.5.3",
     "normalize.css": "^8.0.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
     "react-bem-helper": "^1.4.1",
-    "react-colorful": "^5.6.1",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.1.1"
   },
@@ -50,8 +44,6 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
     "eslint-plugin-lodash": "^7.4.0",
-    "eslint-plugin-mui-path-imports": "^0.0.15",
-    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
     "typescript": "^5.2.2"
