--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-table": "^8.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
     "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
     "eslint-plugin-i": "^2.28.1",
     "govuk-frontend": "^4.7.0",
