--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "next start",
     "format": "prettier",
     "type": "tsc",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -16,6 +17,7 @@
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/jest": "^29.5.5",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
     "drizzle-orm": "^0.28.6",
@@ -33,6 +35,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.2",
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^14.0.0",
     "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
@@ -45,6 +49,8 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
     "eslint-plugin-lodash": "^7.4.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
     "sass": "^1.68.0",
     "typescript": "^5.2.2"
