--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.0.3",
+    "prettier-2": "npm:prettier@^2",
     "sass": "^1.68.0",
     "typescript": "^5.2.2"
   },
