--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react": "18.2.0",
     "react-bem-helper": "^1.4.1",
     "react-dom": "18.2.0",
-    "react-merge-refs": "^2.1.1"
+    "react-hook-form": "^7.47.0",
+    "react-merge-refs": "^2.1.1",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^13.5.2",
@@ -39,8 +42,8 @@
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
-    "@types/react": "18.2.12",
-    "@types/react-dom": "18.2.5",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
     "@typescript-eslint/parser": "^6.7.2",
     "drizzle-kit": "^0.19.13",
