--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "drizzle-orm": "^0.28.6",
     "eslint-plugin-i": "^2.28.1",
     "govuk-frontend": "^4.7.0",
+    "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.1",
     "next": "^14.0.0",
