--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "drizzle-kit": "^0.19.13",
     "encoding": "^0.1.13",
     "eslint": "^8.50.0",
+    "eslint-config-next": "^14.0.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "npm:eslint-plugin-i@^2.28.1",
     "eslint-plugin-lodash": "^7.4.0",
