--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@emotion/css": "^11.11.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@supabase/auth-helpers-nextjs": "latest",
+    "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
     "@tanstack/react-table": "^8.10.3",
     "@total-typescript/ts-reset": "^0.5.1",
@@ -25,7 +25,7 @@
     "immer": "^10.0.3",
     "lodash": "^4.17.21",
     "nanoid": "^5.0.1",
-    "next": "^14.0.0",
+    "next": "^14.0.1",
     "normalize.css": "^8.0.1",
     "postgres": "^3.3.5",
     "react": "18.2.0",
@@ -39,6 +39,7 @@
     "@next/eslint-plugin-next": "^13.5.2",
     "@testing-library/jest-dom": "^6.1.4",
     "@testing-library/react": "^14.0.0",
+    "@types/cookie": "^0.5.3",
     "@types/jest": "^29.5.5",
     "@types/lodash": "^4.14.199",
     "@types/node": "20.3.1",
