--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "format": "prettier",
     "type": "tsc",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watch",
+    "gen-public": "supabase gen types typescript --project-id 'gbcmevenrutxlkqvlxwz' --schema public > types/supabase.ts"
   },
   "dependencies": {
     "@emotion/css": "^11.11.2",
@@ -32,6 +33,7 @@
     "react-bem-helper": "^1.4.1",
     "react-dom": "18.2.0",
     "react-merge-refs": "^2.1.1",
+    "string-ts": "^1.3.2",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
   },
@@ -59,6 +61,7 @@
     "prettier": "^3.0.3",
     "prettier-2": "npm:prettier@^2",
     "sass": "^1.68.0",
+    "supabase": "^1.110.1",
     "typescript": "^5.2.2"
   },
   "prettier": {}
